[package]
name = "bsa"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = "0.7.5"
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.21"
lz4 = "1.23.1"

[[bin]]
name = "bsa"
path = "src/main.rs"
