[package]
name = "bsa"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
lz4 = "1.23.1"
log = "0.4.14"

pretty_env_logger = { version = "0.4.0", optional = true }
structopt = { version = "0.3.21", optional = true }

[features]
default = [ "cli" ]
cli = [ "pretty_env_logger", "structopt" ]

[[bin]]
name = "bsa"
path = "src/main.rs"
required-features = [ "cli" ]
