[package]
name = "bsa"
version = "0.1.1"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"
license = "CC0-1.0"
description = "Library and CLI tool for working with Bethesda Software Archives (BSA files)"
homepage = "https://github.com/printfn/bsa"
repository = "https://github.com/printfn/bsa"
categories = ["command-line-utilities", "encoding", "filesystem", "game-development", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
lz4 = "1.23.1"
log = "0.4.14"

pretty_env_logger = { version = "0.4.0", optional = true }
structopt = { version = "0.3.21", optional = true }

[features]
default = ["cli"]
cli = ["pretty_env_logger", "structopt"]

[[bin]]
name = "bsa"
path = "src/main.rs"
required-features = ["cli"]
